@@ -20,6 +20,7 @@ Date: ????
     - Fail at making the input respect the direction
     - Fix it, but tight corners still break it
     - Fix the backwards solver
+    - Attempt to support backwards underground belts
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2024. 11. 12
